<?xml version="1.0"?>
<package format="2">
  <name>wyvern_teleop</name>
  <version>1.0.0</version>
  <description>
  The wyvern_teleop package

  </description>

  <maintainer email="ohsirawat@gmail.com">Sirawat Soksawatmakin</maintainer>
  <author>Sirawat Soksawatmakin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>diagnostic_updater</depend>
  <depend>sensor_msgs</depend>
  <depend>joystick</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
